# massive

./: data.py  mass.py  struct.txt
massive/: Makefile  README.md  pyproject.toml
massive/configs/: generators.yaml  macro_map.yaml
massive/src/massive/: cli.py  io_json.py  macros.py  midi.py  randomizers.py  schema.py  validate.py
massive/tests/: test_macros.py  test_midi.py  test_schema.py
